--- a/lms/site_lms/templates/lista_curso.html
+++ b/lms/site_lms/templates/lista_curso.html
@@ -38,7 +38,43 @@
 
 	<div>
 		<H1>POR QUE A IMPACTA REVOLUCIONA O SEU FUTURO?</H1>
+		<p class="txt-graduacao">Há 30 anos no mercado, a Faculdade Impacta tem alto nível de empregabilidade nas maiores empresas do País.</p>
+
+		<p class="txt-graduacao">Segundo pesquisa realizada pelo LinkedIn, a Instituição possui 98,2% de contratação no segundo semestre do curso.</p>
 	</div>
+
+	<div class="videos">
+		<div class="video1">
+			<video  width="400px" height="380px" controls>
+				<source src="../static/SMARTCLASS.mp4" type="video/mp4">
+				<source src="../static/SMARTCLASS.ogg" type="video/ogg">
+			</video>
+		</div>
+		<div class="video2">
+			<video  width="400px" height="380px" controls>
+				<source src="../static/cadeia.mp4" type="video/mp4">
+				<source src="../static/cadeia.ogg" type="video/ogg">
+			</video>
+		</div>
+
+		<div class="video3">
+			<video  width="400px" height="380px" controls>
+				<source src="../static/shop.mp4" type="video/mp4">
+				<source src="../static/shop.ogg" type="video/ogg">
+			</video>
+		</div>
+	</div>
+
+<div class="ribbon4">
+			
+		</div>
+
+
+		<footer class="footer-graduacao">TESTE3</footer>
+
+		<div class="ribbon5">
+			
+		</div>
 
 </body>
 </html>
