--- a/lms/site_lms/templates/index.html
+++ b/lms/site_lms/templates/index.html
@@ -36,11 +36,76 @@
 	<div class="txt-banner1">
 				<img src="../static/vestibular_2019.png">
 			</div>
-			<button class="btn-conheca" > <a href="lista_curso"> Conheça nossos cursos </a></button>
+			<button class="btn-inscreva" > <a href="lista_curso">INSCREVA-SE JÁ </a></button>
 		<img  class ="banner-index" src="../static/banner1.png">
-		
+		<div>
+		<h2 class="titulo-2-index">
+			Provas 24 
+			<span class="ponto-index"></span>
+			11
+		</h2>
+	</div>
+	<br>
+</div>
+
+	<div class="segundo">
+		<h1 class="titulo-premios">PRÊMIOS E RECONHECIMENTOS</h1>
+
+		<p class="conteudo-premios">A Faculdade Impacta é altamente reconhecida por sua atuação no mercado da educação, o que comprova o compromisso da Instituição com o ensino de qualidade e a dedicação do Grupo Impacta em transformar a sociedade através da tecnologia.
+                Desta maneira, ao longo dos anos a Faculdade Impacta tem recebido prêmios e reconhecimentos que são resultados do trabalho contínuo de professores e funcionários e da determinação de seus alunos. 
+            </p>
+
+            <div class="box-1-premios">
+            	<img src="../static/simbolo1.png">
+            </div>
+
+            <div class="box-2-premios">
+				<img src="../static/simbolo2.png">            
+            </div>
+
+            <div class="box-3-premios">
+				<img src="../static/simbolo3.png">            	
+            </div>
+
+            <div class="box-4-premios">
+            	<img src="../static/simbolo4.png">
+            </div>
+
+
 	</div>
 
-		
+			<div class="smart">
+				<img class="logo-compacto" src="../static/logo-compacto.png">
+
+				<div class="imagem-smart">
+					<img src="../static/smart.jpg">
+				</div>
+
+				<div class="conteudo-smart">
+					<h2 class="titulo-smart">CONHEÇA O SMARTCLASS</h2>
+
+					<p class="p-smart">As salas de aula da Faculdade Impacta são equipadas com lousas eletrônicas, que capturam todos os pontos das aulas presenciais, como voz, escrita dinâmica, vídeos e navegação do professor. Todo o conteúdo é gravado e disponibilizado em uma sala de ensino virtual para que o aluno assista quando e onde quiser, de qualquer plataforma digital.</p>
+
+					<button class="btn-saiba" > <a href="#">SAIBA MAIS </a></button>
+				</div>
+			</div>
+
+
+
+
+		<!-- ----------------------------------------------------------------------------------------- -->
+		<div class="ribbon">
+			
+		</div>
+
+		<div class="ribbon2">
+			
+		</div>
+
+		<div class="ribbon3">
+			
+		</div>
+
+		<footer>TESTE3</footer>
 </body>
 </html>
